[package]
name = "candle-vllm-fix"
version = "0.1.0"
edition = "2021"

# [lib]
# name = "rust_from_cpp"
# crate-type = ["staticlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.110"

[build-dependencies]
cxx-build = "1.0"
